<resources>
    <string name="app_name">Easy Learning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="full_name">full name</string>
    <string name="phone_number">Phone number</string>
    <string name="add_image">Add Image</string>
    <string name="please_select_your_type">Please select your Type</string>
    <string name="please_select_your_subject">Please select your subject</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="other">other</string>


    <string-array name="Subject">
        <item>General</item>
        <item>IT</item>
        <item>Medicine</item>
        <item>Engineering</item>
        <item>Dating</item>
        <item>Education</item>
    </string-array>
    <string-array name="Type">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string-array name="Timer">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
    </string-array>
</resources>