<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CompleteProfileFragment">



    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_profile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/purple_200"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            />
        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            />

    </FrameLayout>
    <EditText
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/editTextTextPersonName"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage" />

    <EditText
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/editTextPhone"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <LinearLayout
        android:id="@+id/type_spinner"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/please_select_your_type"
            />

        <Spinner
            android:id="@+id/Type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subject_spinner"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_spinner"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/please_select_your_subject"
            />

        <Spinner
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_spinner" />


</androidx.constraintlayout.widget.ConstraintLayout>